--- a/source/Flip.AzureBackup.Core.Tests/Flip.AzureBackup.Core.Tests.csproj
+++ b/source/Flip.AzureBackup.Core.Tests/Flip.AzureBackup.Core.Tests.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F5A44281-E1CA-434F-A695-506F1EB0468F}</ProjectGuid>
+    <ProjectGuid>{2A2B9152-665A-4F33-83C9-A144DB5EF8C4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Flip.AzureBackup</RootNamespace>
-    <AssemblyName>Flip.AzureBackup.Core</AssemblyName>
+    <RootNamespace>Flip.AzureBackup.Core.Tests</RootNamespace>
+    <AssemblyName>Flip.AzureBackup.Core.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
   </PropertyGroup>
@@ -23,8 +22,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -33,49 +30,29 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac">
-      <HintPath>..\packages\Autofac.2.6.3.862\lib\NET40\Autofac.dll</HintPath>
-    </Reference>
-    <Reference Include="Autofac.Configuration">
-      <HintPath>..\packages\Autofac.2.6.3.862\lib\NET40\Autofac.Configuration.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.WindowsAzure.StorageClient, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="xunit">
+      <HintPath>..\packages\xunit.1.9.1\lib\net20\xunit.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\SolutionInfo.cs">
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
-    <Compile Include="ByteExtensions.cs" />
-    <Compile Include="NumberExtensions.cs" />
-    <Compile Include="Logging\LoggerExtensions.cs" />
-    <Compile Include="WindowsAzure\CloudBlobStorage.cs" />
-    <Compile Include="Providers\UploadAnalysisSyncronizationProvider.cs" />
-    <Compile Include="CloudBlobContainerExtensions.cs" />
-    <Compile Include="CloudBlobExtensions.cs" />
-    <Compile Include="Providers\DownloadKeepSyncronizationProvider.cs" />
-    <Compile Include="Providers\DownloadDeleteSyncronizationProvider.cs" />
-    <Compile Include="Providers\SyncronizationStatistics.cs" />
-    <Compile Include="Providers\UploadSyncronizationProvider.cs" />
-    <Compile Include="IO\FileSystem.cs" />
-    <Compile Include="IO\IFileSystem.cs" />
-    <Compile Include="IO\FileInformation.cs" />
-    <Compile Include="ISynchronizer.cs" />
-    <Compile Include="Providers\ISyncronizationProvider.cs" />
-    <Compile Include="Logging\ILogger.cs" />
-    <Compile Include="Logging\TextWriterLogger.cs" />
+    <Compile Include="LongExtensionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SynchronizationAction.cs" />
-    <Compile Include="Synchronizer.cs" />
-    <Compile Include="SyncronizationSettings.cs" />
-    <Compile Include="WindowsAzure\ICloudBlobStorage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Flip.AzureBackup.Core\Flip.AzureBackup.Core.csproj">
+      <Project>{f5a44281-e1ca-434f-a695-506f1eb0468f}</Project>
+      <Name>Flip.AzureBackup.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
