--- a/source/Flip.AzureBackup.Core/Flip.AzureBackup.Core.csproj
+++ b/source/Flip.AzureBackup.Core/Flip.AzureBackup.Core.csproj
@@ -50,11 +50,21 @@
     <Compile Include="..\SolutionInfo.cs">
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
-    <Compile Include="ByteExtensions.cs" />
-    <Compile Include="NumberExtensions.cs" />
+    <Compile Include="Actions\EmptySyncAction.cs" />
+    <Compile Include="Actions\UpdateFileSyncAction.cs" />
+    <Compile Include="Actions\CreateFileSyncAction.cs" />
+    <Compile Include="Actions\UpdateFileModifiedDateSyncAction.cs" />
+    <Compile Include="Actions\CreateBlobSyncAction.cs" />
+    <Compile Include="Actions\DeleteBlobSyncAction.cs" />
+    <Compile Include="Actions\DeleteFileSyncAction.cs" />
+    <Compile Include="Actions\ISyncAction.cs" />
+    <Compile Include="Actions\UpdateBlobModifiedDateSyncAction.cs" />
+    <Compile Include="Actions\UpdateBlobSyncAction.cs" />
+    <Compile Include="WindowsAzure\ByteExtensions.cs" />
+    <Compile Include="WindowsAzure\NumberExtensions.cs" />
     <Compile Include="Logging\LoggerExtensions.cs" />
-    <Compile Include="WindowsAzure\CloudBlobStorage.cs" />
     <Compile Include="Providers\UploadAnalysisSyncronizationProvider.cs" />
+    <Compile Include="WindowsAzure\CloudBlobStorage.cs" />
     <Compile Include="CloudBlobContainerExtensions.cs" />
     <Compile Include="CloudBlobExtensions.cs" />
     <Compile Include="Providers\DownloadKeepSyncronizationProvider.cs" />
@@ -64,14 +74,14 @@
     <Compile Include="IO\FileSystem.cs" />
     <Compile Include="IO\IFileSystem.cs" />
     <Compile Include="IO\FileInformation.cs" />
-    <Compile Include="ISynchronizer.cs" />
+    <Compile Include="ISyncEngine.cs" />
     <Compile Include="Providers\ISyncronizationProvider.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Logging\TextWriterLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="AzureSyncAction.cs" />
+    <Compile Include="SyncAction.cs" />
     <Compile Include="AzureSyncEngine.cs" />
-    <Compile Include="AzureSyncSettings.cs" />
+    <Compile Include="SyncSettings.cs" />
     <Compile Include="WindowsAzure\ICloudBlobStorage.cs" />
   </ItemGroup>
   <ItemGroup>
