--- a/source/packages/repositories.config
+++ b/source/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\externals\Flip.Common\Source\Flip.Common.Core.Tests\packages.config" />
   <repository path="..\Flip.AzureBackup.Console\packages.config" />
   <repository path="..\Flip.AzureBackup.Core.Tests\packages.config" />
   <repository path="..\Flip.AzureBackup.Core\packages.config" />
