--- a/source/Flip.AzureBackup.Core/Flip.AzureBackup.Core.csproj
+++ b/source/Flip.AzureBackup.Core/Flip.AzureBackup.Core.csproj
@@ -50,44 +50,37 @@
     <Compile Include="..\SolutionInfo.cs">
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
-    <Compile Include="Actions\EmptySyncAction.cs" />
-    <Compile Include="Actions\SyncAction.cs" />
-    <Compile Include="Actions\UpdateFileSyncAction.cs" />
-    <Compile Include="Actions\CreateFileSyncAction.cs" />
-    <Compile Include="Actions\UpdateFileModifiedDateSyncAction.cs" />
-    <Compile Include="Actions\CreateBlobSyncAction.cs" />
-    <Compile Include="Actions\DeleteBlobSyncAction.cs" />
-    <Compile Include="Actions\DeleteFileSyncAction.cs" />
-    <Compile Include="Actions\ISyncAction.cs" />
-    <Compile Include="Actions\UpdateBlobModifiedDateSyncAction.cs" />
-    <Compile Include="Actions\UpdateBlobSyncAction.cs" />
     <Compile Include="Messages\ActionProgressedMessage.cs" />
     <Compile Include="Messages\SyncStoppedMessage.cs" />
     <Compile Include="Messages\SyncStartedMessage.cs" />
     <Compile Include="Messages\SyncPausedMessage.cs" />
     <Compile Include="WindowsAzure\ByteExtensions.cs" />
+    <Compile Include="WindowsAzure\CloudBlobConstants.cs" />
     <Compile Include="WindowsAzure\NumberExtensions.cs" />
     <Compile Include="Logging\LogExtensions.cs" />
-    <Compile Include="Providers\UploadAnalysisSyncronizationProvider.cs" />
-    <Compile Include="WindowsAzure\CloudBlobStorage.cs" />
+    <Compile Include="WindowsAzure\Providers\UploadAnalysisSyncronizationProvider.cs" />
     <Compile Include="WindowsAzure\CloudBlobContainerExtensions.cs" />
     <Compile Include="WindowsAzure\CloudBlobExtensions.cs" />
-    <Compile Include="Providers\DownloadKeepSyncronizationProvider.cs" />
-    <Compile Include="Providers\DownloadDeleteSyncronizationProvider.cs" />
-    <Compile Include="Providers\SyncronizationStatistics.cs" />
-    <Compile Include="Providers\UploadSyncronizationProvider.cs" />
+    <Compile Include="WindowsAzure\Providers\DownloadKeepSyncronizationProvider.cs" />
+    <Compile Include="WindowsAzure\Providers\DownloadDeleteSyncronizationProvider.cs" />
+    <Compile Include="WindowsAzure\Providers\SyncronizationStatistics.cs" />
+    <Compile Include="WindowsAzure\Providers\UploadSyncronizationProvider.cs" />
     <Compile Include="IO\FileSystem.cs" />
     <Compile Include="IO\IFileSystem.cs" />
     <Compile Include="IO\FileInformation.cs" />
     <Compile Include="ISyncEngine.cs" />
-    <Compile Include="Providers\ISyncronizationProvider.cs" />
+    <Compile Include="WindowsAzure\Providers\ISyncronizationProvider.cs" />
     <Compile Include="Logging\ILog.cs" />
     <Compile Include="Logging\TextWriterLog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SyncAction.cs" />
     <Compile Include="WindowsAzure\CloudSyncEngine.cs" />
     <Compile Include="SyncSettings.cs" />
-    <Compile Include="WindowsAzure\ICloudBlobStorage.cs" />
+    <Compile Include="WindowsAzure\Tasks\CreateWorkTaskRunner.cs" />
+    <Compile Include="WindowsAzure\Tasks\DownloadLargeFileTaskRunner.cs" />
+    <Compile Include="WindowsAzure\Tasks\EmptyTaskRunner.cs" />
+    <Compile Include="WindowsAzure\Tasks\UploadLargeFileTaskRunner.cs" />
+    <Compile Include="WindowsAzure\Tasks\SingleActionTaskRunner.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -98,6 +91,7 @@
       <Name>Flip.Common.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
